# drasi-mcp-agent

./: .gitignore  README.md  pyproject.toml
deploy/: mcp-server.yaml  run-demo.sh  show-timeline.sh  trigger-change.sh
docs/: ARCHITECTURE.md  INTEGRATION-NOTES.md  SPEC-FINDINGS.md  demo-transcript.txt
resources/: echo-llm.yaml  pubsub.yaml  statestore.yaml
src/drasi_mcp_agent/: activation.py  agent.py  app.py  config.py  receiver.py  state.py  subscription.py
src/drasi_mcp_agent/mcp_events/: __init__.py  client.py  wire.py
tests/: agent_test.py  client_test.py  config_test.py  receiver_test.py  state_test.py  subscription_test.py  wire_test.py
