[project]
name = "drasi-mcp-agent"
version = "0.1.0"
description = "Event-driven Dapr agent: subscribes to Drasi changes via MCP Events webhooks, scales to zero, wakes on change"
requires-python = ">=3.11,<3.14"
license = "Apache-2.0"
dependencies = [
    "dapr-agents",
    "httpx>=0.27",
    "uvicorn>=0.30",
]

[tool.uv.sources]
dapr-agents = { path = "../dapr-agents", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/drasi_mcp_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.6"]
